2005-02-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpselectiondata.c
	* plug-ins/help/domain.c
	* plug-ins/helpbrowser/dialog.c: fixed my latest changes.

2005-02-07  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/file-open-location-dialog.c
	(file_open_location_dialog_new): set "activates-default" on the
	URI entry.

2005-02-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/domain.c
	* plug-ins/helpbrowser/dialog.c: same trick here; should allow to
	work with help files installed in an UNC path.

2005-02-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-open-dialog.c
	* app/dialogs/file-save-dialog.c
	* app/widgets/gimpthumbbox.c: use file_utils_filename_from_uri()
	in some more places.

	* app/dialogs/file-open-location-dialog.c
	* app/widgets/gimpselectiondata.c: deal with hostname in URIs.

2005-02-07  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagefile.c (gimp_imagefile_get_desc_string):
	changed "Remote Image" to "Remote File". The state of the
	thumbnail doesn't tell us if this is an image file at all.

	* app/widgets/gimpthumbbox.c: don't auto-thumbnail remote files.

	* libgimpthumb/gimpthumb-utils.[ch]
	* libgimpthumb/gimpthumbnail.c: do the same workaround for UNC
	paths as in file_utils_filename_from_uri().

2005-02-07  Michael Natterer  <mitch@gimp.org>

	* plug-ins/uri/uri-backend.h: added backend methods
	uri_backend_init() and uri_backend_shutdown().

	* plug-ins/uri/uri.c: call them around using other backend
	functions (both in query() and run()).

	* plug-ins/uri/uri-backend-gnomevfs.c: moved init()/shutdown() of
	GnomeVFS into the new backend methods. Create the list of
	supported protocols dynamically. Get rid of one translatable
	string.

	* plug-ins/uri/uri-backend-wget.c: implement the new methods as
	empty stubs which always succeed.

2005-02-07  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/Makefile.am
	* libgimpconfig/gimpconfig.def
	* libgimpconfig/gimpconfig.h